--- a/index.html
+++ b/index.html
@@ -1,128 +1,299 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Конструкторское бюро | Разработка и прототипирование</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Реверс-дизайн — Landing</title>
+  <meta name="description" content="Лендинг проектного кабинета: реверс-инжиниринг, прототипирование, ортезы и производство." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      color: #222;
-      background: #fafafa;
+    :root{
+      --bg:#0f1724;            /* deep navy */
+      --card:#0b1520;          /* darker card */
+      --muted:#9fb8d9;         /* cold muted */
+      --accent:#67c1ff;        /* bright cyan */
+      --accent-2:#4aa3d8;      /* secondary cyan */
+      --glass: rgba(255,255,255,0.03);
+      --glass-2: rgba(103,193,255,0.04);
+      --radius:16px;
+      --fw-sans: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
     }
-    header {
-      background: #111;
-      color: #fff;
-      padding: 2rem;
-      text-align: center;
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0;background:linear-gradient(180deg,var(--bg) 0%, #07101a 100%);font-family:var(--fw-sans);color:#e6f2ff}
+    a{color:var(--accent)}
+    img{max-width:100%;height:auto;display:block;border-radius:10px}
+
+    .container{max-width:1100px;margin:0 auto;padding:48px 20px}
+    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
+    .logo{display:flex;align-items:center;gap:12px}
+    .logo .mark{width:46px;height:46px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:grid;place-items:center;font-weight:800;color:#012233}
+    nav{display:flex;gap:18px;align-items:center}
+    nav a{font-weight:600;color:rgba(230,242,255,0.85);text-decoration:none}
+
+    .hero{display:grid;grid-template-columns:1fr 420px;gap:36px;align-items:center;padding:64px 0}
+    .eyebrow{color:var(--muted);font-weight:600;letter-spacing:1px}
+    h1{font-size:36px;line-height:1.02;margin:12px 0;color:linear-gradient(90deg,var(--accent),#bfeaff);}
+    .lead{font-size:15px;color:#cde8ff;max-width:60%}
+
+    .cta-row{display:flex;gap:12px;margin-top:20px}
+    .btn{padding:12px 18px;border-radius:12px;font-weight:700;border:0;cursor:pointer}
+    .btn-primary{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:#012233}
+    .btn-ghost{background:transparent;border:1px solid rgba(103,193,255,0.12);color:var(--muted)}
+
+    .card{background:linear-gradient(180deg,var(--glass),transparent);border-radius:var(--radius);padding:18px;border:1px solid rgba(255,255,255,0.03);box-shadow:0 8px 30px rgba(0,0,0,0.6)}
+
+    /* thesis style */
+    .thesis{margin:10px 0}
+    .thesis strong{display:block;font-weight:700;color:#eaf7ff}
+    .thesis em{display:block;font-style:italic;color:rgba(230,242,255,0.65);font-weight:300;margin-top:6px}
+
+    /* features */
+    .features{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:28px}
+    .feature .icon{width:46px;height:46px;border-radius:10px;background:rgba(103,193,255,0.08);display:grid;place-items:center;font-weight:700;color:var(--accent)}
+
+    /* sections */
+    section{padding:72px 0;border-top:1px solid rgba(255,255,255,0.02)}
+    .section-title{display:flex;align-items:baseline;gap:12px}
+    .section-title h2{margin:0;font-size:22px}
+    .muted{color:var(--muted)}
+
+    /* process timeline */
+    .timeline{display:grid;grid-template-columns:repeat(4,1fr);gap:18px;margin-top:24px}
+    .step{padding:18px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.015),transparent);border:1px solid rgba(255,255,255,0.02)}
+
+    /* gallery */
+    .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:14px}
+
+    /* FAQ */
+    .faq{display:grid;grid-template-columns:1fr 1fr;gap:18px}
+    details{background:var(--card);padding:14px;border-radius:10px}
+
+    footer{padding:36px 0;color:var(--muted);font-size:14px}
+
+    /* responsive */
+    @media (max-width:980px){
+      .hero{grid-template-columns:1fr}
+      .features{grid-template-columns:repeat(2,1fr)}
+      .timeline{grid-template-columns:repeat(2,1fr)}
+      .grid-2{grid-template-columns:1fr}
     }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
+    @media (max-width:560px){
+      .features{grid-template-columns:1fr}
+      nav{display:none}
+      h1{font-size:28px}
     }
-    header p {
-      margin: 0.5rem 0 0;
-      font-size: 1.1rem;
-      color: #aaa;
-    }
-    section {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    h2 {
-      margin-top: 2rem;
-      font-size: 1.5rem;
-      border-left: 4px solid #333;
-      padding-left: 0.5rem;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      margin-top: 1rem;
-    }
-    .card {
-      background: #fff;
-      padding: 1.2rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    .card h3 {
-      margin-top: 0;
-    }
-    footer {
-      background: #111;
-      color: #aaa;
-      text-align: center;
-      padding: 1.5rem;
-      margin-top: 3rem;
-    }
-    footer a {
-      color: #fff;
-      text-decoration: none;
-    }
+
+    /* subtle animations */
+    .fade-up{transform:translateY(8px);opacity:0;animation:up .9s ease forwards}
+    @keyframes up{to{transform:none;opacity:1}}
+
+    /* placeholder-svg style */
+    .placeholder{display:grid;place-items:center;border-radius:8px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);padding:20px;border:1px dashed rgba(103,193,255,0.08);min-height:160px;color:var(--muted);font-size:14px;text-align:center}
+    .small{font-size:13px}
   </style>
 </head>
 <body>
+  <div class="container">
+    <header>
+      <div class="logo">
+        <div class="mark">RD</div>
+        <div>
+          <div style="font-weight:700">Реверс-дизайн</div>
+          <div class="small muted">Проекты · Прототипы · Производство</div>
+        </div>
+      </div>
+      <nav>
+        <a href="#features">Услуги</a>
+        <a href="#process">Процесс</a>
+        <a href="#projects">Проекты</a>
+        <a href="#contact">Контакты</a>
+      </nav>
+    </header>
 
-<header>
-  <h1>Конструкторское бюро</h1>
-  <p>Разработка изделий и прототипирование под задачу</p>
-</header>
+    <main>
+      <section class="hero" aria-label="Главный блок">
+        <div class="card fade-up">
+          <div class="eyebrow">R&D · Reverse Engineering · Production</div>
+          <h1>Технологическая мастерская прототипов и изделий медицинского и промышленного назначения</h1>
+          <p class="lead muted">Мы превращаем существующие объекты и идеи в готовые к производству изделия: от 3D-сканов и реверса до серийной печати и мелкосерийного литья.</p>
 
-<section>
-  <h2>Что мы делаем</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>3D-моделирование</h3>
-      <p>Создание моделей любой сложности. Исправление и оптимизация чужих файлов. Подготовка к печати и производству.</p>
-    </div>
-    <div class="card">
-      <h3>Прототипы</h3>
-      <p>Быстрая итерационная проверка идей: от чернового варианта до рабочих образцов.</p>
-    </div>
-    <div class="card">
-      <h3>Конструкторская документация</h3>
-      <p>Чертежи, спецификации и технические описания для передачи в производство.</p>
-    </div>
-    <div class="card">
-      <h3>Производственные решения</h3>
-      <p>Подбор технологии (3D-печать, фрезеровка, литьё, комбинированные методы). Оптимизация под тираж.</p>
-    </div>
+          <div class="thesis">
+            <strong>Комплексный цикл</strong>
+            <em>Анализ, моделирование, верификация конструкций и подготовка к производству.</em>
+          </div>
+          <div class="thesis">
+            <strong>Индивидуальные ортезы и промо‑изделия</strong>
+            <em>Кастомизация под анатомию и стиль — готовые CAD и файлы для печати/литья.</em>
+          </div>
+
+          <div class="cta-row">
+            <button class="btn btn-primary">Заказать консультацию</button>
+            <button class="btn btn-ghost">Скачать техзадание (PDF)</button>
+          </div>
+        </div>
+
+        <aside>
+          <div class="card fade-up">
+            <div style="display:flex;gap:12px;align-items:center;justify-content:space-between">
+              <div>
+                <div class="small muted">Контакт</div>
+                <div style="font-weight:700">Nick Ra — CTO</div>
+                <div class="muted small">email@domain.example</div>
+              </div>
+              <div style="text-align:right">
+                <div class="small muted">Над проектом</div>
+                <div style="font-weight:700">Команда 6 человек</div>
+                <div class="muted small">Москва · EU</div>
+              </div>
+            </div>
+
+            <hr style="margin:14px 0;border:none;border-top:1px solid rgba(255,255,255,0.02)">
+
+            <div class="features">
+              <div class="card feature">
+                <div class="icon">3D</div>
+                <div class="thesis"><strong>Сканирование и метрология</strong><em>Точные цифровые копии для анализа и редизайна.</em></div>
+              </div>
+              <div class="card feature">
+                <div class="icon">CAD</div>
+                <div class="thesis"><strong>CAD и параметрика</strong><em>Параметрические модели для быстрой итерации и подгонки.</em></div>
+              </div>
+              <div class="card feature">
+                <div class="icon">Fab</div>
+                <div class="thesis"><strong>Печать и мелкое производство</strong><em>Фотополимеры, FDM, SLA, SLA-постобработка и сборка.</em></div>
+              </div>
+            </div>
+          </div>
+        </aside>
+      </section>
+
+      <section id="features">
+        <div class="section-title">
+          <h2>Блоки услуг</h2>
+          <div class="muted small">Чётко. Лаконично. Выполнимо.</div>
+        </div>
+
+        <div style="margin-top:18px" class="grid-2">
+          <div class="card">
+            <div class="thesis"><strong>Реверс-инжиниринг</strong><em>Разбор изделия до уровня чертежей, BOM и технологической карты.</em></div>
+            <div class="thesis"><strong>3D-сканирование</strong><em>Контролируемая точность, подготовка сеток и редукция полигонов.</em></div>
+            <div class="thesis"><strong>CAD-проектирование</strong><em>Сборочная модель, допуски, сопряжения и стандарты производства.</em></div>
+            <div class="thesis"><strong>Прототипирование</strong><em>Быстрые итерации с учетом эксплуатации и эргономики.</em></div>
+          </div>
+
+          <div class="card">
+            <div class="thesis"><strong>Медицинские ортезы</strong><em>Анатомическая посадка, материалы, комфорт и безопасность.</em></div>
+            <div class="thesis"><strong>Производство</strong><em>Подготовка к мелкосерийному выпуску и выбор подрядчиков.</em></div>
+            <div class="thesis"><strong>Тестирование и валидация</strong><em>Механические, клинические и эксплуатационные испытания.</em></div>
+            <div class="thesis"><strong>Документация</strong><em>Постановка КД: чертежи, спецификации, инструкции сборки и ухода.</em></div>
+          </div>
+        </div>
+
+        <div class="features" style="margin-top:22px">
+          <div class="card">
+            <div class="thesis"><strong>UI / Инструменты управления</strong><em>Инструменты для контроля цветокоррекции и визуализации параметров.</em></div>
+            <div class="thesis"><strong>Интеграция с подрядчиками</strong><em>Передача техдокументации и контроль качества производства.</em></div>
+            <div class="thesis"><strong>Сопровождение проектов</strong><em>От идеи до передачи в производство и поддержки первых партий.</em></div>
+          </div>
+
+          <div class="card">
+            <div class="placeholder" role="img" aria-label="AI-gen: professional photo of a modern prototyping lab, sleek machines, blue lighting, high detail">
+              AI-gen placeholder:<br><strong>modern prototyping lab, sleek machines, blue lighting</strong>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="process">
+        <div class="section-title"><h2>Процесс — 6 шагов</h2><div class="muted small">От запроса до партии</div></div>
+        <div class="timeline">
+          <div class="step card">
+            <div class="thesis"><strong>1. Анализ</strong><em>Снятие ТЗ, оценка целесообразности и риск‑логика.</em></div>
+          </div>
+          <div class="step card">
+            <div class="thesis"><strong>2. Скан/измерения</strong><em>Получение цифровой модели с контрольными точками.</em></div>
+          </div>
+          <div class="step card">
+            <div class="thesis"><strong>3. CAD и прототип</strong><em>Итерации, посадка и функциональные тесты.</em></div>
+          </div>
+          <div class="step card">
+            <div class="thesis"><strong>4. Верификация</strong><em>Испытания, доработки и подтверждение допусков.</em></div>
+          </div>
+          <div class="step card">
+            <div class="thesis"><strong>5. Подготовка производства</strong><em>Технологические карты, сборочные чертежи, выбор материалов.</em></div>
+          </div>
+          <div class="step card">
+            <div class="thesis"><strong>6. Поддержка первых партий</strong><em>QA, отладка подрядчиков и документация по эксплуатации.</em></div>
+          </div>
+        </div>
+      </section>
+
+      <section id="projects">
+        <div class="section-title"><h2>Примеры проектов</h2><div class="muted small">Коротко о кейсах</div></div>
+
+        <div class="grid-2" style="margin-top:18px">
+          <div class="card">
+            <div class="thesis"><strong>Кейс: ортез голеностопа</strong><em>Полупаралитический пациент — анатомическая посадка, легкий каркас, модульная застёжка.</em></div>
+            <div class="placeholder" role="img" aria-label="AI-gen: anatomical ankle brace on a human leg, white background, clinical, soft blue tones" style="margin-top:12px">
+              AI-gen placeholder:<br><strong>anatomical ankle brace on a human leg, clinical soft blue tones</strong>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="thesis"><strong>Кейс: туристический карабин — копия</strong><em>Реверс, оптимизация массы, проверка на прочность и подготовка к штамповке.</em></div>
+            <div class="placeholder" role="img" aria-label="AI-gen: closeup of a climbing carabiner, metallic, high-detail, studio lighting" style="margin-top:12px">
+              AI-gen placeholder:<br><strong>closeup of a climbing carabiner, metallic, high-detail</strong>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="faq">
+        <div class="section-title"><h2>FAQ</h2><div class="muted small">Ответы на частые вопросы</div></div>
+        <div class="faq" style="margin-top:18px">
+          <details class="card"><summary><strong>Сколько времени займёт прототип?</strong></summary><div style="margin-top:10px" class="muted">Зависит от сложности: от 3–5 рабочих дней для простых деталей до 4–6 недель для сложных анатомических изделий.</div></details>
+          <details class="card"><summary><strong>Какие файлы я получу?</strong></summary><div style="margin-top:10px" class="muted">CAD (STEP/IGES), STL для печати, чертежи, спецификации и технологические карты.</div></details>
+          <details class="card"><summary><strong>Работаете ли с серийным производством?</strong></summary><div style="margin-top:10px" class="muted">Да. От мелкой серии (до 500 штук) до подготовительных этапов для массового производства.</div></details>
+          <details class="card"><summary><strong>Можно ли получить индивидуальный дизайн?</strong></summary><div style="margin-top:10px" class="muted">Да — снимаем мерки, готовим шаблоны и финальные CAD‑файлы для производства.</div></details>
+        </div>
+      </section>
+
+      <section id="contact">
+        <div class="section-title"><h2>Связаться</h2><div class="muted small">Доступные каналы</div></div>
+        <div style="margin-top:18px" class="card">
+          <div style="display:flex;gap:18px;align-items:center;flex-wrap:wrap">
+            <div style="flex:1;min-width:240px">
+              <div class="thesis"><strong>Напишите на почту</strong><em>email@domain.example — быстрый ответ в рабочие часы.</em></div>
+              <div class="thesis"><strong>Telegram</strong><em>@nick_ra — оперативная связь и обмен файлами.</em></div>
+            </div>
+            <form style="flex:1;min-width:240px;display:flex;flex-direction:column;gap:8px" onsubmit="event.preventDefault();alert('Спасибо — запрос отправлен (плейсхолдер).')">
+              <input required placeholder="Имя" style="padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit">
+              <input required type="email" placeholder="Email" style="padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit">
+              <textarea required placeholder="Короткое описание проекта" rows="3" style="padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit"></textarea>
+              <div style="display:flex;gap:10px"><button class="btn btn-primary" type="submit">Отправить</button><button class="btn btn-ghost" type="reset">Очистить</button></div>
+            </form>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    <footer>
+      <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
+        <div class="small">© "+ new Date().getFullYear() + " Реверс‑дизайн — Все права защищены</div>
+        <div class="small muted">Made with technical aesthetic · cold blue palette</div>
+      </div>
+    </footer>
   </div>
-</section>
 
-<section>
-  <h2>Форматы работы</h2>
-  <ul>
-    <li>Точечные задачи (исправить модель, подготовить файл).</li>
-    <li>Полный цикл: идея → проект → прототип → готовое изделие.</li>
-    <li>Удалённое сопровождение разработки и производства.</li>
-  </ul>
-</section>
-
-<section>
-  <h2>Почему с нами удобно</h2>
-  <ul>
-    <li>Прямота и конкретика: без лишней бюрократии.</li>
-    <li>Этапы и цена фиксируются заранее.</li>
-    <li>Гибкий формат — от разовых заказов до длительного сотрудничества.</li>
-    <li>Сильная сторона — доведение идей до физического результата.</li>
-  </ul>
-</section>
-
-<section>
-  <h2>Контакты</h2>
-  <p>📧 <a href="mailto:yourmail@example.com">yourmail@example.com</a><br>
-     💬 Telegram: <a href="https://t.me/yourname">@yourname</a></p>
-</section>
-
-<footer>
-  <p>© 2025 Конструкторское бюро. Сделано для GitHub Pages</p>
-</footer>
-
+  <script>
+    // small enhancement: replace year placeholder server-side not available in static html
+    (function(){
+      var footer = document.querySelector('footer .small');
+      if(footer) footer.textContent = '© ' + new Date().getFullYear() + ' Реверс‑дизайн — Все права защищены';
+    })();
+  </script>
 </body>
 </html>
