--- a/index.html
+++ b/index.html
@@ -1,183 +1,260 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>КБ - Изготовление изделий под заказ</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<style>
-    /* Общие стили */
-    body { font-family: 'Inter', sans-serif; margin:0; padding:0; background:#f5f7fa; color:#1b1b1b; scroll-behavior:smooth;}
-    a { text-decoration:none; }
-    h1,h2,h3,h4 { margin:0 0 15px 0; color:#0f1c2c; }
-    p { margin-bottom:20px; line-height:1.6; }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>КБ Производственная Студия</title>
+  <style>
+    /* Базовая гамма */
+    :root {
+      --bg-dark: #0b0f1a;
+      --bg-light: #1e263b;
+      --accent: #00aaff;
+      --text-light: #e0e6f0;
+      --text-dark: #0b0f1a;
+    }
 
-    /* Header */
-    header { background:#0f1c2c; color:#ffffff; padding:60px 20px; text-align:center; }
-    header h1 { font-size:3em; }
-    header p { font-size:1.3em; margin-top:10px; max-width:700px; margin-left:auto; margin-right:auto; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Roboto, sans-serif;
+      background-color: var(--bg-dark);
+      color: var(--text-light);
+      line-height: 1.6;
+    }
 
-    .cta { display:inline-block; padding:15px 35px; background:#1b2a3c; color:#fff; font-weight:600; border-radius:10px; margin-top:20px; transition:0.3s; }
-    .cta:hover { background:#2e3f57; }
+    a {
+      color: var(--accent);
+      text-decoration: none;
+    }
 
-    /* Nav */
-    nav { background:#1b2a3c; display:flex; justify-content:center; flex-wrap:wrap; gap:15px; padding:15px 20px; position:sticky; top:0; z-index:999; }
-    nav a { color:#ffffff; font-weight:600; padding:5px 10px; transition:0.3s; }
-    nav a:hover { background:#283c55; border-radius:5px; }
+    header {
+      background-color: var(--bg-light);
+      padding: 2rem;
+      text-align: center;
+    }
 
-    /* Sections */
-    section { padding:80px 20px; max-width:1200px; margin:0 auto; }
-    .placeholder { width:100%; height:300px; background:#d1d9e6; display:flex; justify-content:center; align-items:center; color:#555; font-size:1em; border-radius:12px; margin-bottom:20px; }
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
 
-    /* Steps */
-    .steps { display:grid; grid-template-columns:repeat(auto-fit, minmax(280px,1fr)); gap:30px; }
-    .step { background:#ffffff; padding:25px; border-radius:15px; box-shadow:0 6px 12px rgba(0,0,0,0.08); display:flex; flex-direction:column; align-items:center; text-align:center; }
-    .step img { width:80px; height:80px; margin-bottom:15px; }
+    nav {
+      margin-top: 1rem;
+    }
 
-    /* Cases */
-    .case { background:#ffffff; border-radius:15px; padding:25px; box-shadow:0 6px 12px rgba(0,0,0,0.08); text-align:center; }
-    .case img { width:100%; height:200px; border-radius:12px; object-fit:cover; margin-bottom:15px; }
+    nav a {
+      margin: 0 1rem;
+      font-weight: bold;
+    }
 
-    /* FAQ */
-    .faq-item { margin-bottom:25px; }
-    .faq-item h4 { cursor:pointer; background:#e1e7f0; padding:15px; border-radius:10px; }
-    .faq-item p { display:none; padding:15px; margin:0; border-left:3px solid #1b2a3c; background:#f0f4fb; border-radius:0 10px 10px 0; }
+    section {
+      padding: 4rem 2rem;
+      max-width: 1000px;
+      margin: auto;
+    }
 
-    /* Footer */
-    footer { background:#0f1c2c; color:#fff; text-align:center; padding:50px 20px; }
-    footer a { color:#64b5f6; }
+    h2 {
+      color: var(--accent);
+      margin-bottom: 1rem;
+    }
 
-</style>
+    h3 {
+      margin-top: 2rem;
+      color: var(--accent);
+    }
+
+    p {
+      margin-bottom: 1rem;
+    }
+
+    .block {
+      background-color: var(--bg-light);
+      padding: 2rem;
+      margin-bottom: 2rem;
+      border-radius: 10px;
+    }
+
+    .cta-button {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.8rem 2rem;
+      background-color: var(--accent);
+      color: var(--text-dark);
+      font-weight: bold;
+      border-radius: 6px;
+    }
+
+    img {
+      max-width: 100%;
+      border-radius: 6px;
+      margin-top: 1rem;
+    }
+
+    ul {
+      padding-left: 1.2rem;
+    }
+
+    footer {
+      background-color: var(--bg-light);
+      text-align: center;
+      padding: 2rem;
+      margin-top: 2rem;
+    }
+
+    /* Простой сеточный блок */
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 2rem;
+    }
+
+    @media (max-width: 768px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
+    }
+  </style>
 </head>
 <body>
 
-<!-- Header -->
 <header>
-    <h1>Изготовление изделий под заказ</h1>
-    <p>От идеи до готового продукта. Решения для частных и корпоративных задач любой сложности.</p>
-    <a href="#contact" class="cta">Опишите задачу</a>
+  <h1>КБ Производственная Студия</h1>
+  <nav>
+    <a href="#home">Главная</a>
+    <a href="#faq">Вопросы</a>
+    <a href="#techdoc">Техдокументация</a>
+    <a href="#contact">Контакты</a>
+  </nav>
 </header>
 
-<!-- Nav -->
-<nav>
-    <a href="#process">Процесс</a>
-    <a href="#cases">Примеры решений</a>
-    <a href="#faq">FAQ</a>
-    <a href="techdoc.html">Техдокументация</a>
-    <a href="#contact">Контакты</a>
-</nav>
+<!-- Главная страница -->
+<section id="home">
+  <h2>Как мы решаем вашу задачу</h2>
+  <p>От момента описания задачи до готового изделия, вы видите каждый шаг процесса и участвуете в его согласовании.</p>
 
-<!-- Процесс -->
-<section id="process">
-    <h2>Процесс работы</h2>
-    <div class="steps">
-        <div class="step">
-            <img src="" alt="Иконка первого контакта" />
-            <h3>Первый контакт</h3>
-            <p>Вы описываете задачу, ограничения и цели. Мы фиксируем запрос и делаем первые наброски решения.</p>
-            <div class="placeholder" alt="Схематическая визуализация первого контакта с клиентом, эскизы на столе"></div>
-        </div>
-        <div class="step">
-            <img src="" alt="Иконка анализа задачи" />
-            <h3>Анализ задачи</h3>
-            <p>Оцениваем, какие шаги нужны для реализации. Формируем визуализацию или схему работы изделия.</p>
-            <div class="placeholder" alt="3D-схема изделия, блоки и этапы работы"></div>
-        </div>
-        <div class="step">
-            <img src="" alt="Иконка предложения решения" />
-            <h3>Предложение решения</h3>
-            <p>Готовим рабочее предложение: материалы, сроки, этапы работы. Для сложных проектов — поэтапное описание.</p>
-            <div class="placeholder" alt="Эскиз изделия с этапами, схемы производства"></div>
-        </div>
-        <div class="step">
-            <img src="" alt="Иконка закрепления решения" />
-            <h3>Закрепление решения</h3>
-            <p>Согласовываем детали и запускаем работу, фиксируем этапы оплаты и контрольные точки.</p>
-            <div class="placeholder" alt="Документы согласования и план проекта"></div>
-        </div>
-        <div class="step">
-            <img src="" alt="Иконка работы над проектом" />
-            <h3>Работа над проектом</h3>
-            <p>Выполняем проект по шагам, показываем промежуточные результаты: эскизы, 3D-модель, прототипы.</p>
-            <div class="placeholder" alt="Фотографии прототипов и этапов работы"></div>
-        </div>
-        <div class="step">
-            <img src="" alt="Иконка готового изделия" />
-            <h3>Готовое изделие</h3>
-            <p>Передаём готовый продукт с инструкциями по использованию и рекомендациями по эксплуатации.</p>
-            <div class="placeholder" alt="Готовое изделие на рабочем столе, готовое к использованию"></div>
-        </div>
-        <div class="step">
-            <img src="" alt="Иконка поддержки" />
-            <h3>Поддержка после передачи</h3>
-            <p>Остаёмся на связи для уточнений, изменений или новых версий изделия по согласованному плану.</p>
-            <div class="placeholder" alt="Обратная связь с клиентом, общение по проекту"></div>
-        </div>
-    </div>
-</section>
+  <div class="block">
+    <h3>1. Первый контакт</h3>
+    <p>Вы описываете задачу, ограничения и цели. Можно прислать сообщение, эскиз или фото примера изделия.</p>
+    <img src="placeholder_contact.jpg" alt="Набросок идеи изделия для обсуждения с инженером, пример визуализации задачи для клиента">
+  </div>
 
-<!-- Кейсы -->
-<section id="cases">
-    <h2>Примеры решений</h2>
-    <p>Проекты, демонстрирующие подход к изготовлению изделий под заказ.</p>
-    <div class="steps">
-        <div class="case">
-            <div class="placeholder" alt="Фотография прототипа медицинского ортеза, этапы изготовления"></div>
-            <h3>Кейс 1</h3>
-            <p>Описание проекта: задача, материал, результат.</p>
-        </div>
-        <div class="case">
-            <div class="placeholder" alt="3D-модель технического изделия, этапы сборки"></div>
-            <h3>Кейс 2</h3>
-            <p>Описание проекта: задача, материал, результат.</p>
-        </div>
-    </div>
+  <div class="block">
+    <h3>2. Анализ задачи</h3>
+    <p>Мы определяем, какие шаги нужны для реализации и формируем простую визуализацию или схему работы изделия.</p>
+    <img src="placeholder_analysis.jpg" alt="Схема или 3D эскиз изделия, показывающий этапы работы и функционал">
+  </div>
+
+  <div class="block">
+    <h3>3. Предложение решения</h3>
+    <p>Вы получаете план: что будет сделано, из чего, сроки и последовательность этапов. Для сложных проектов — прототип → тест → финальный продукт.</p>
+    <img src="placeholder_proposal.jpg" alt="Пример технического предложения с эскизами и этапами изготовления изделия">
+  </div>
+
+  <div class="block">
+    <h3>4. Закрепление решения</h3>
+    <p>После согласования деталей мы фиксируем план работы и приступаем к реализации. Оплата по этапам или полностью, в зависимости от проекта.</p>
+    <img src="placeholder_agreement.jpg" alt="Подписание договора и согласование этапов работы над проектом, этапная оплата">
+  </div>
+
+  <div class="block">
+    <h3>5. Работа над проектом</h3>
+    <p>Вы видите промежуточные результаты: фото, 3D-модель, тестовый прототип. Корректировки возможны по ходу работы.</p>
+    <img src="placeholder_work.jpg" alt="Фотографии прототипа изделия и процесса изготовления, этапы тестирования">
+  </div>
+
+  <div class="block">
+    <h3>6. Готовое изделие</h3>
+    <p>Передача изделия, инструкции по эксплуатации и рекомендации по использованию. Возможна доставка или самовывоз.</p>
+    <img src="placeholder_final.jpg" alt="Готовое изделие на рабочем месте клиента, пример использования изделия">
+  </div>
+
+  <div class="block">
+    <h3>7. Поддержка после передачи</h3>
+    <p>Дополнения, изменения или новые версии изделия выполняются по согласованному плану. Вы можете обратиться с новой задачей в любое время.</p>
+    <img src="placeholder_support.jpg" alt="Обратная связь с клиентом после передачи изделия, пример поддержки и доработок">
+  </div>
+
+  <a href="#contact" class="cta-button">Описать задачу</a>
 </section>
 
 <!-- FAQ -->
 <section id="faq">
-    <h2>Часто задаваемые вопросы</h2>
-    <div class="faq-item">
-        <h4>Сколько времени занимает изготовление изделия?</h4>
-        <p>Время зависит от сложности проекта и выбранных материалов. Обычно от 1 до 6 недель.</p>
-    </div>
-    <div class="faq-item">
-        <h4>Можно ли скорректировать прототип перед финальным изготовлением?</h4>
-        <p>Да, на этапе работы над проектом все корректировки обсуждаются и вносятся.</p>
-    </div>
-    <div class="faq-item">
-        <h4>Какие материалы используются?</h4>
-        <p>Выбор материала зависит от задачи: пластики для прототипов, фотополимеры, металлы и композиты для финальных изделий.</p>
-    </div>
-    <div class="faq-item">
-        <h4>Какие размеры и данные нужно предоставить?</h4>
-        <p>Для точного изделия нужны основные размеры и/или сканирование области применения. При необходимости проводим замеры самостоятельно.</p>
-    </div>
+  <h2>Часто задаваемые вопросы</h2>
+
+  <div class="block">
+    <h3>Какие сроки выполнения проекта?</h3>
+    <p>Срок зависит от сложности изделия. Простое изделие — от нескольких дней, сложный прототип — от пары недель. Точные сроки согласовываются индивидуально.</p>
+
+    <h3>Какие материалы используются?</h3>
+    <p>Выбор материала зависит от функционала и условий эксплуатации. Мы работаем с пластиками, металлами и композитами. Конкретный вариант согласуется на этапе анализа задачи.</p>
+
+    <h3>Можно ли внести изменения после начала работы?</h3>
+    <p>Да, корректировки возможны на всех этапах, особенно при работе с прототипом или тестовой версией изделия.</p>
+
+    <h3>Как оформить заказ?</h3>
+    <p>Через форму на сайте или сообщение в мессенджер. После уточнения деталей мы формируем предложение и согласовываем этапы работы.</p>
+
+    <h3>Что если изделие нужно срочно?</h3>
+    <p>Есть ускоренные варианты, если позволяют материалы и оборудование. Сроки и стоимость уточняются индивидуально.</p>
+  </div>
+</section>
+
+<!-- Пример техдокументации -->
+<section id="techdoc">
+  <h2>Пример технической документации</h2>
+  <p>Для ознакомления мы показываем структурированный пример документации на изделие.</p>
+
+  <div class="block">
+    <h3>1. Название изделия</h3>
+    <p>Ортез голеностопа, индивидуальный размер.</p>
+
+    <h3>2. Описание и назначение</h3>
+    <p>Функция: стабилизация сустава, ограничение осевого кручения, снятие нагрузки. Применение: повседневное и реабилитационное.</p>
+
+    <h3>3. Основные размеры и материалы</h3>
+    <ul>
+      <li>Обхват голени: 35–45 см</li>
+      <li>Обхват стопы: 22–30 см</li>
+      <li>Материал: фотополимер, TPU для гибких элементов</li>
+    </ul>
+
+    <h3>4. Этапы изготовления</h3>
+    <ul>
+      <li>Сканирование и снятие мерок</li>
+      <li>Параметрическая 3D-модель</li>
+      <li>Печать прототипа</li>
+      <li>Проверка посадки и корректировка</li>
+      <li>Печать финальной версии</li>
+      <li>Финишная обработка и сборка</li>
+    </ul>
+
+    <h3>5. Визуализация</h3>
+    <img src="placeholder_techdoc.jpg" alt="3D-модель ортеза с пометками размеров, материалов и сборки">
+  </div>
 </section>
 
 <!-- Контакты -->
 <section id="contact">
-    <h2>Связаться с нами</h2>
-    <p>Опишите задачу и оставьте контакт — мы подготовим предложение.</p>
-    <a href="mailto:example@example.com" class="cta">Написать на email</a>
-    <p>Или через мессенджеры: WhatsApp / Telegram</p>
+  <h2>Контакты</h2>
+  <p>Вы можете написать нам сообщение или прислать краткое описание задачи.</p>
+
+  <form>
+    <label>Имя:<br>
+      <input type="text" name="name" required>
+    </label><br><br>
+    <label>Email или мессенджер:<br>
+      <input type="text" name="contact" required>
+    </label><br><br>
+    <label>Описание задачи:<br>
+      <textarea name="task" rows="4" required></textarea>
+    </label><br><br>
+    <button type="submit" class="cta-button">Отправить</button>
+  </form>
 </section>
 
-<!-- Footer -->
 <footer>
-    <p>&copy; 2025 КБ. Все права защищены. <a href="techdoc.html">Пример технической документации</a></p>
+  <p>&copy; 2025 КБ Производственная Студия</p>
 </footer>
-
-<script>
-    // FAQ открытие
-    const faqItems = document.querySelectorAll('.faq-item h4');
-    faqItems.forEach(item => {
-        item.addEventListener('click', () => {
-            const p = item.nextElementSibling;
-            p.style.display = p.style.display === 'block' ? 'none' : 'block';
-        });
-    });
-</script>
 
 </body>
 </html>
